Fix Server power operations page style
On the Server power operations page, need a width: 100% for the
"Select a power operation" header.

Drop "Row" from power operations div to fix confirm modal being
cut off.

These are needed because of the move to Bootstrap 4.
84e114a

Resolves openbmc/phosphor-webui#51

--- a/app/common/styles/layout/content.scss
+++ b/app/common/styles/layout/content.scss
@@ -44,6 +44,7 @@ $nav__seclvlWidth: 240px;
 }
 
 .subhead {
+  width: 100%;
   border-bottom: 1px solid $medgrey;
   padding-bottom: .5em;
 }
